# rusty-chart

chart-processor/: Cargo.toml
chart-processor/src/: lib.rs
chart-processor/src/api/: fetch.rs  http.rs  mod.rs
chart-processor/src/chart/: types.rs
chart-processor/src/consumptions/: types.rs
frontend/: .oxfmtrc.json  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  chart.ts  main.ts  style.css
frontend/src/components/form/: FormFieldDiscriminator.vue
frontend/src/components/ui/calendar/: Calendar.vue  CalendarCellTrigger.vue  CalendarGridRow.vue
frontend/src/components/ui/input-group/: index.ts
frontend/src/components/ui/number-field/: NumberFieldDecrement.vue  NumberFieldIncrement.vue
frontend/src/components/ui/range-calendar/: RangeCalendar.vue  RangeCalendarCellTrigger.vue  RangeCalendarGridRow.vue
frontend/src/composables/form/: types.ts
frontend/src/layout/: TheNav.vue
frontend/src/router/: index.ts
frontend/src/stores/: login.ts
frontend/src/views/: TheComments.view.vue  TheForm.view.vue  TheHome.view.vue
