[package]
name = "chart-processor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3", features = ["Window", "Location"] }

# The HTTP Client
[dependencies.reqwest]
version = "0.13.2"
default-features = false # <--- IMPORTANT: Disable native OS features
features = ["json"]      # Enable JSON support
